# cpptoy

./: .gitignore  .gitmodules  .nvim.lua  meson.build  meson_options.txt
src/: app.cpp  benchmark.cpp  main.cpp  main.hpp  shared_pch.hpp
src/siga/toy/: util.hpp
src/siga/util/: bind.hpp  experimental.hpp  flag_set.hpp  functional.hpp  iterator.hpp  meta.hpp  shared_from_this_base.hpp  toy.hpp  tuple.hpp  utility.hpp
subprojects/: .gitignore  grace.wrap  siga-util.wrap
